GearsetPOC/force-app/main/default/objects/Contact_Us_Label_Translations__mdt/Contact_Us_Label_Translations__mdt.object-meta.xml
<CustomObject>
    <label>Contact Us Label Translations</label>
    <pluralLabel>Contact Us Label Translations</pluralLabel>
</CustomObject>