GearsetPOC/force-app/main/default/objects/Contact_Us_Label_Translations__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>96</length>
    <type>Text</type>
</CustomField>