GearsetPOC/force-app/main/default/objects/Contact_Us_Label_Translations__mdt/fields/Dutch__c.field-meta.xml
<CustomField>
    <fullName>Dutch__c</fullName>
    <label>Dutch</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>