GearsetPOC/force-app/main/default/objects/Contact_Us_Label_Translations__mdt/fields/English__c.field-meta.xml
<CustomField>
    <fullName>English__c</fullName>
    <label>English</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>