GearsetPOC/force-app/main/default/objects/Contact_Us_Label_Translations__mdt/fields/French__c.field-meta.xml
<CustomField>
    <fullName>French__c</fullName>
    <label>French</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>