GearsetPOC/force-app/main/default/objects/Contact_Us_Label_Translations__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Message</fullName>
                <default>true</default>
                <label>Message</label>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>