GearsetPOC/force-app/main/default/objects/Contact_Us_Label_Translations__mdt/listViews/All_columns.listView-meta.xml
<ListView>
    <fullName>All_columns</fullName>
    <columns>NamespacePrefix</columns>
    <columns>Type__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Category__c</columns>
    <columns>English__c</columns>
    <columns>French__c</columns>
    <columns>Dutch__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All columns</label>
    <language>en_US</language>
</ListView>